--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/nuget_packages/nsec"]
-	path = src/nuget_packages/nsec
+[submodule "submodules/nsec"]
+	path = submodules/nsec
 	url = https://github.com/atlascity/nsec.git
