fix console and test getting disposed password

--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
@@ -18,6 +18,6 @@
     <Compile Include="..\..\submodules\Nethereum\src\Nethereum.RLP.UnitTests\RLPTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Helpers\Util" />
+    <Folder Include="Helpers\Util\" />
   </ItemGroup>
 </Project>
