--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -7,10 +7,10 @@
         <PackageProjectUrl>http://github.com/atlascity/catalyst-node</PackageProjectUrl>
         <RepositoryUrl>http://github.com/atlascity/catalyst-node</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
         <LangVersion>7.3</LangVersion>
         <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <Deterministic>true</Deterministic>
         <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
