--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Networker" Version="3.0.9-rc" />
     <PackageReference Include="Networker.Formatter.ProtobufNet" Version="3.0.9-rc" />
     <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
     <PackageReference Include="Dawn.Guard" Version="1.7.0" />
