--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -36,6 +36,7 @@
     <!--NSec Dependencies-->
     <PackageReference Include="libsodium" Version="[1.0.17]" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
   </ItemGroup>
   <ItemGroup>
