start to see how modules should be configured, this is just so I don't lose it all

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -17,5 +17,10 @@
         }
       ]
     }
-  ]
+  ],
+  "modules": [
+    {
+      "type": "Catalyst.Node.Core.Modules.Gossip.GossipModule"
+    }
+  ] 
 }
