--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -3,9 +3,9 @@
     <PropertyGroup>
         <Company>AtlasCity.io</Company>
         <Copyright>Copyright © 2019 AtlasCity.io</Copyright>
-        <PackageLicenseUrl>http://github.com/atlascity/catalyst-node/LICENSE.md</PackageLicenseUrl>
-        <PackageProjectUrl>http://github.com/atlascity/catalyst-node</PackageProjectUrl>
-        <RepositoryUrl>http://github.com/atlascity/catalyst-node</RepositoryUrl>
+        <PackageLicenseUrl>http://github.com/catalyst-network/catalyst-node/LICENSE</PackageLicenseUrl>
+        <PackageProjectUrl>http://github.com/catalyst-network/catalyst-node</PackageProjectUrl>
+        <RepositoryUrl>http://github.com/catalyst-network/catalyst-node</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <RuntimeFrameworkVersion>2.1.1</RuntimeFrameworkVersion>
         <LangVersion>7.3</LangVersion>
