move cryptography tests to common.tests && add test for unsupported platforms

--- a/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
+++ b/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
@@ -4,9 +4,17 @@
   </PropertyGroup>
   <Import Project="../Common.UnitTests.props" />
   <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-      <PackageReference Include="xunit" Version="2.4.0" />
-      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="NSubstitute" Version="4.0.0" />
+    <PackageReference Include="xunit.core" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Catalyst.Node.Common\Catalyst.Node.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\Util\" />
+  </ItemGroup>
 </Project>
