Allow modules to register and use their own config files (#152)
* configs calling configs, just to not loose it over the weekend

* Merge from develop and finish config skeletons

* try unix friendly paths

* Codacy warnings

--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
@@ -22,5 +22,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\Util\" />
+    <Folder Include="Modules\Dfs\" />
   </ItemGroup>
 </Project>
