add authentication module, add nethereum keystore to common

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -47,6 +47,12 @@
       "parameters": {
         "configFilePath": "Config/Modules/mempool.json"
       }
+    },
+    {
+      "type": "Catalyst.Node.Core.Modules.JsonConfiguredModule",
+      "parameters": {
+        "configFilePath": "Config/Modules/authentication.json"
+      }
     }
   ] 
 }
