--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <PackageReference Include="Dawn.Guard" Version="1.7.0" />
     <PackageReference Include="Catalyst.Protocol" Version="0.0.1.381-beta" />
+    <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="libsodium" Version="[1.0.17]" />
     <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3-prerelease" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
   </ItemGroup>
   <ItemGroup>
@@ -98,8 +100,8 @@
     <Compile Include="..\..\submodules\nsec\src\Interop\Interop.XChaCha20Poly1305.cs" Link="Helpers\NSec\Interop\Interop.XChaCha20Poly1305.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="..\..\submodules\nsec\src\Cryptography\Error.resx" Link="Helpers\NSec\Cryptography\Error.resx" >
-        <LogicalName>NSec.Cryptography.Error.resources</LogicalName>
+    <EmbeddedResource Include="..\..\submodules\nsec\src\Cryptography\Error.resx" Link="Helpers\NSec\Cryptography\Error.resx">
+      <LogicalName>NSec.Cryptography.Error.resources</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
