Move shell to common (#193)
* delete listener factory

* delete connection manager

* delete peer list

* delete messages

* remove referance to tests code

* delete old bash command helper

* clean shell code

* clean shell

* move network helpers to Catalyst.Common

* move shell to Catalyst.Node.Common

* Move generic helpers to common

--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -123,11 +123,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Config" />
     <Folder Include="Helpers\Hex\HexConverters\Extensions\" />
     <Folder Include="Helpers\Hex\HexTypes\" />
+    <Folder Include="Helpers\IO" />
     <Folder Include="Helpers\NSec\Cryptography\Buffer\" />
     <Folder Include="Helpers\NSec\Cryptography\Formatting\" />
     <Folder Include="Helpers\NSec\Interop\" />
     <Folder Include="Helpers\RLP\" />
+    <Folder Include="Helpers\Streams" />
+    <Folder Include="Helpers\Util" />
+    <Folder Include="Helpers\Workers" />
+    <Folder Include="Interfaces" />
   </ItemGroup>
 </Project>
